# cadencia

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  LICENSE  Makefile  PROGRESS.md  README.md  docker-compose.dev.yml  docker-compose.yml
.gemini/: settings.json
.gemini/agents/: cadencia.md  cadencia.yaml
.github/workflows/: ci.yml
app/: .dockerignore  Dockerfile  pyproject.toml
app/src/cadencia/: config.py  main.py
app/src/cadencia/api/: action_items.py  allocations.py  deps.py  health.py  observations.py  one_on_ones.py  people.py
app/src/cadencia/db/: connection.py  migrations.py
app/src/cadencia/models/: activities.py  allocations.py  feedback.py  observations.py  one_on_ones.py  people.py  queries.py  stakeholders.py
app/src/cadencia/services/: action_items.py  activities.py  allocations.py  context.py  feedback.py  people.py  (+5 more)
app/src/em_journal/: main.py
app/tests/api/: conftest.py  test_api_smoke.py
app/tests/services/: conftest.py  test_action_items.py  test_activities.py  test_allocations.py  test_context.py  test_observations.py  test_one_on_ones.py  test_people.py  test_queries.py  test_stakeholders.py
backup/: Dockerfile  backup.sh
docs/: SPEC.md
docs/superpowers/plans/: 2026-04-17-frontend-refresh.md  2026-04-17-stakeholder-edit-aliases.md
docs/superpowers/specs/: 2026-04-17-frontend-refresh-design.md  2026-04-17-stakeholder-edit-aliases-design.md
mcp/: Dockerfile  pyproject.toml
mcp/src/cadencia_mcp/: server.py
mcp/src/em_journal_mcp/: server.py
scripts/: bootstrap.sh  pre-commit  restore.sh  setup-dev.sh
(+52 files in other folders)
