[project]
name = "cadencia-mcp"
version = "0.1.0"
description = "MCP server for Cadencia"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cadencia_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/cadencia_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
